--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Daily Skincare</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_view_db">View Database</string>
 
     <!-- Condition slider strings -->
     <string name="excellent">Excellent</string>
