--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="new_ingredient">New ingredient</string>
     <string name="delete_button">Delete</string>
     <string name="save_button">Save</string>
+    <string name="update_button_text">Update</string>
 
 
 </resources>
