--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,17 +25,27 @@
     <string name="general_condition">General Condition</string>
 
     <!-- General Strings -->
-    <string name="name_string">Name</string>
     <string name="delete_button_string">Delete</string>
     <string name="save_button_string">Save</string>
     <string name="update_button_string">Update</string>
+    <string name="cancel_string">Cancel</string>
+    <string name="no_changes_string">No changes to save!</string>
+    <string name="toast_save_success">Save successful</string>
+    <string name="toast_update_success">Update successful</string>
+    <string name="toast_save_failed">Error saving entry</string>
+    <string name="toast_delete_successful">Entry deleted</string>
+    <string name="toast_delete_failed">Error deleting entry</string>
 
 
     <!-- Ingredient Strings -->
+    <string name="ingredient_name_string">Ingredient Name</string>
     <string name="ingredients">Ingredients</string>
     <string name="ingredient_irritant">Skin irritant</string>
     <string name="ingredient_comment">comment</string>
     <string name="new_ingredient">New ingredient</string>
+    <string name="alert_delete_confirm">delete</string>
+    <string name="alert_delete_message">Are you sure you want to delete this ingredient?</string>
+    <string name="alert_delete_title">Delete ingredient?</string>
 
     <!-- Product Strings -->
     <string name="product_name_string">Product Name</string>
