--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item>Ingredients</item>
         <item>Analytics</item>
         <item>Settings</item>
+        <item>Clear Database *FOR TESTING*</item>
     </string-array>
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
@@ -38,6 +39,8 @@
     <string name="alert_delete_confirm">delete</string>
     <string name="done_string">done</string>
     <string name="no_string">no</string>
+    <string name="edit_string">edit</string>
+
 
 
     <!-- Ingredient Strings -->
@@ -50,12 +53,11 @@
     <string name="alert_delete_ingredient_title">Delete ingredient?</string>
 
     <!-- Product Strings -->
-    <string name="product_name_string">Product Name</string>
-    <string name="brand_string">Brand</string>
+    <string name="product_name_string">product Name</string>
+    <string name="brand_string">brand</string>
     <string name="products">Products</string>
     <string name="new_product">New product</string>
     <string name="product_ingredients">Ingredients</string>
-    <string name="product_edit">edit</string>
     <string name="product_type">Type</string>
     <string name="alert_delete_product_message">Are you sure you want to delete this product?</string>
     <string name="alert_delete_product_title">Delete product?</string>
@@ -73,6 +75,15 @@
         <item>Self Tanner</item>
         <item>Other</item>
     </string-array>
+
+    <!-- Routine Strings -->
+    <string name="routine_new_routine">New routine</string>
+    <string name="routine_name_string">routine name</string>
+    <string name="routine_application_time">Time of application</string>
+    <string name="routine_products">Products</string>
+    <string name="routine_comment">comment</string>
+    <string name="routine_radio_AM">AM</string>
+    <string name="routine_radio_PM">PM</string>
 
 
 </resources>
