Create custom seekbar for condition sliders.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="fair">Fair</string>
     <string name="poor">Poor</string>
     <string name="very_poor">Very Poor</string>
-    <string name="terrible">Terrible</string>
+    <string name="terrible">Severe</string>
     <string name="general_condition">General Condition</string>
 
     <!-- General Strings -->
