--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="alert_delete_confirm">delete</string>
     <string name="done_string">done</string>
     <string name="no_string">no</string>
-    <string name="edit_string">edit</string>
+    <string name="add_remove_string">Add/Remove</string>
     <string name="toast_enter_valid_name">Please enter a name</string>
     <string name="field_name_string">name</string>
 
@@ -44,7 +44,12 @@
     <string name="poor">Poor</string>
     <string name="very_poor">Very Poor</string>
     <string name="severe">Severe</string>
-    <string name="general_condition">General Condition</string>
+    <string name="diary_entry_general_condition">General Condition</string>
+    <string name="diary_entry_forehead_condition">Forehead Condition</string>
+    <string name="diary_entry_nose_condition">Nose Condition</string>
+    <string name="diary_entry_cheeks_condition">Cheeks Condition</string>
+    <string name="diary_entry_lips_condition">Lips Condition</string>
+    <string name="diary_entry_chin_condition">Chin Condition</string>
     <string name="diary_entry_delete_alert_dialog_message">Are you sure you want to delete this entry?</string>
     <string name="diary_entry_delete_alert_dialog_title">Delete diary entry?</string>
     <string name="diary_entry_back_alert_dialog_title">Save changes?</string>
@@ -107,8 +112,8 @@
     <string name="routine_back_alert_dialog_message">Save changes made to this routine?</string>
 
     <!-- Item List Dialog Strings -->
-    <string name="item_list_select_ingredients">Select ingredients to add</string>
-    <string name="item_list_select_products">Select products to add</string>
+    <string name="item_list_select_ingredients">Select ingredients</string>
+    <string name="item_list_select_products">Select products</string>
     <string name="item_list_new_string">New</string>
 
 
