Add show more button to diary entry. Toggle showing additional conditions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,12 +44,15 @@
     <string name="poor">Poor</string>
     <string name="very_poor">Very Poor</string>
     <string name="severe">Severe</string>
+    <string name="diary_entry_skin_condition_string">Skin</string>
     <string name="diary_entry_general_condition">General Condition</string>
-    <string name="diary_entry_forehead_condition">Forehead Condition</string>
-    <string name="diary_entry_nose_condition">Nose Condition</string>
-    <string name="diary_entry_cheeks_condition">Cheeks Condition</string>
-    <string name="diary_entry_lips_condition">Lips Condition</string>
-    <string name="diary_entry_chin_condition">Chin Condition</string>
+    <string name="diary_entry_forehead_condition">Forehead</string>
+    <string name="diary_entry_nose_condition">Nose</string>
+    <string name="diary_entry_cheeks_condition">Cheeks</string>
+    <string name="diary_entry_lips_condition">Lips</string>
+    <string name="diary_entry_chin_condition">Chin</string>
+    <string name="diary_entry_show_more_string">Show more</string>
+    <string name="diary_entry_show_more_content_description">Show more skin condition sliders.</string>
     <string name="diary_entry_delete_alert_dialog_message">Are you sure you want to delete this entry?</string>
     <string name="diary_entry_delete_alert_dialog_title">Delete diary entry?</string>
     <string name="diary_entry_back_alert_dialog_title">Save changes?</string>
