--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="diary_entry_chin_condition">Chin</string>
     <string name="diary_entry_show_more_string">Show more</string>
     <string name="diary_entry_show_more_content_description">Show more skin condition sliders.</string>
+    <string name="diary_entry_routines_strings">Today\'s Routines</string>
+    <string name="diary_entry_lifestyle_strings">Lifestyle</string>
     <string name="diary_entry_delete_alert_dialog_message">Are you sure you want to delete this entry?</string>
     <string name="diary_entry_delete_alert_dialog_title">Delete diary entry?</string>
     <string name="diary_entry_back_alert_dialog_title">Save changes?</string>
@@ -117,6 +119,7 @@
     <!-- Item List Dialog Strings -->
     <string name="item_list_select_ingredients">Select ingredients</string>
     <string name="item_list_select_products">Select products</string>
+    <string name="item_list_select_routines">Select routines</string>
     <string name="item_list_new_string">New</string>
 
 
