--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- Calendar Activity Strings -->
     <string name="action_view_db">View Database</string>
-    <string name="action_go_to_date">Go to…</string>
+    <string name="action_go_to_date">Go to date…</string>
 
     <!-- Navigation Drawer Options -->
     <string-array name="drawer_strings">
