Add routine frequency to routine fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,18 @@
     <string name="routine_comment">comments</string>
     <string name="routine_radio_AM">AM</string>
     <string name="routine_radio_PM">PM</string>
+    <string name="routine_frequency_title">Application frequency</string>
+    <string name="routine_radio_frequency_needed">As needed</string>
+    <string name="routine_radio_frequency_daily">Daily</string>
+    <string name="routine_radio_frequency_specified">On selected days</string>
+    <string name="routine_frequency_monday">Mon</string>
+    <string name="routine_frequency_tuesday">Tue</string>
+    <string name="routine_frequency_wednesday">Wed</string>
+    <string name="routine_frequency_thursday">Thu</string>
+    <string name="routine_frequency_friday">Fri</string>
+    <string name="routine_frequency_saturday">Sat</string>
+    <string name="routine_frequency_sunday">Sun</string>
+    <string name="routine_toast_select_days">Select the days on which this routine is applied or choose a different frequency</string>
     <string name="routine_delete_alert_dialog_title">Delete Routine?</string>
     <string name="routine_delete_alert_dialog_message">Are you sure you want to delete this routine?</string>
     <string name="routine_back_alert_dialog_title">Save Changes?</string>
