Refactor button properties and string stack. Add back and start over buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,8 @@
     <string name="item_list_new_string">New</string>
 
     <!-- Analytics Strings -->
+    <string name="analytics_menu_item_back">Back</string>
+    <string name="analytics_menu_item_start_over">Start Over</string>
     <string name="analytics_activity_title">Analytics</string>
     <string name="analytics_query_show_me">Show me</string>
 
